test github connection

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <li>
             <a href="./pages/baking.html">Baking</a>
         </li>
+        <li>
+            <a href="./pages/baking.html">Baking</a>
+        </li>
     </ul>
 </body>
 </html>
